# scrapping-products-ecom

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  aws_setup.sh  conftest.py  lambda_function.py  prepare_lambda_package.sh  pyproject.toml  pytest.ini  requirements-lambda.txt  requirements.txt  setup.py  test_lambda_locally.py  train.py  verify_dependencies.py
.github/workflows/: deploy-lambda.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/processed/: preprocessed_data.parquet
data/raw/: raw_data.parquet
examples/: api_examples.py
notebooks/: clean_scrapper.ipynb  data_preprocessing.ipynb  machine_learning.ipynb  scrapper.ipynb
src/: __init__.py  api.py  predict.py  train_step.py
src/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/catboost_info/learn/: events.out.tfevents
src/data_processing/: __init__.py  cleaner.py  text_processor.py
src/models/: __init__.py  price_predictor.py
src/pipeline/: base.py  orchestrator.py
src/pipeline/steps/: cleaning.py  feature_extraction.py  scraping.py  text_processing.py  training.py
src/scraper/: __init__.py  base.py  base_scraper.py  mercado_libre.py  scraper.py
src/tests/: __init__.py  conftest.py  test_scraper.py
src/utils/: constants.py  data_processor.py
trained_models/: metrics.json  price_model.pkl  vectorizer.pkl
